--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^1.3.3",
     "bootstrap-vue": "^2.13.1",
     "element-ui": "^2.4.11",
     "nuxt": "^2.0.0"
