--- a/frontend_3/package.json
+++ b/frontend_3/package.json
@@ -15,7 +15,10 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "iview": "^3.1.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-lazy-load": "^1.2.2",
+    "swiper": "^5.3.8",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
