--- a/frontend_3/package.json
+++ b/frontend_3/package.json
@@ -18,7 +18,8 @@
     "nuxt": "^2.0.0",
     "nuxt-lazy-load": "^1.2.2",
     "swiper": "^5.3.8",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
