--- a/frontend_3/package.json
+++ b/frontend_3/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxt/http": "^0.5.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "iview": "^3.5.4",
