--- a/frontend_3/package.json
+++ b/frontend_3/package.json
@@ -20,6 +20,7 @@
     "nuxt-lazy-load": "^1.2.2",
     "swiper": "^5.3.8",
     "v-img": "^0.2.0",
+    "view-design": "^4.2.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cool-lightbox": "^2.3.4",
     "vue-fancybox": "^1.0.3",
