--- a/frontend_3/package.json
+++ b/frontend_3/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "iview": "^3.5.4",
+    "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
     "nuxt-lazy-load": "^1.2.2",
     "swiper": "^5.3.8",
